redid the whole thingy

--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,8 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Excuse Generator!</h1>
-      <p id="excuse">My dog ate my homework</p>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
+      <h1 class="mt-5">OMG you will not believe me but...</h1>
+      <h1 id="the-excuse" class="mt-5"></h1>
     </div>
   </body>
 </html>
